Added a row of text and a video. Making steady progress

--- a/index.html
+++ b/index.html
@@ -6,9 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Good Game</title>
     <link href="style.css" rel="stylesheet" type="text/css" media="all"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Chivo+Mono:wght@100&family=Lobster&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 </head>
 <body>
-   <div class="container"></div>
+    <div class="container">
+
+    <nav class="top">
+        <div class="top-pic">
+            <img src="../Signalis/files/top.jpg">
+        </div>
+        <div class="top-end">
+            <a href="#">Buy</a>
+            <a href="#">Support</a>
+            <a href="#">Enjoy</a>
+        </div>
+    </nav>
+
+    <div class="main">
+        <div class="set-one">
+            <img src="../Signalis/files/combat.jpg">
+            <img src="../Signalis/files/elster.png">
+        </div>
+        <div class="set-two">
+            <img src="../Signalis/files/room.png">
+            <img src="../Signalis/files/station.png">
+        </div>
+    </div>
+    <div class="describe">
+        <div class="text">
+            <h1>Signalis is Peak Survival Horror</h1>
+            <p> Resident Evil 1 Remake finally has some competition in this long standing genre.
+                The relatively niche genre stands strong with this new entry.
+            </p>
+        </div>
+        <div class="showcase">
+            <img src="../Signalis/files/scary.jpg" alt="scary">
+        </div>
+    </div>
+    <div class="praise">
+        <h2>After Crash Landing on an Unknown Planet...</h2>
+        <p>A scout shuttle known as the Penrose-512 crashes on an unknown planet. 
+            A Replika unit known as Elster (LSTR) awakens and searches for her missing Gestalt partner, Ariane. 
+            She eventually leaves the ship and crosses a rectangular arch, finding herself in front of a hole containing a staircase. 
+            After she descends and crawls into a tight tunnel leading into a room, the hole closes behind her. As she picks up The King in Yellow, the radio turns on and a German numbers station is read out, while 
+            "Great holes secretly are digged where Earth’s pores ought to suffice, and things have learnt to walk that ought to crawl."</p>
+        <div class="praise-text"><p2>The broadcast ends on visions of Ariane asking Elster to "Remember our promise" and "wake up".</p2></div>
+    </div> 
+    <div class="goomplay">
+        <video width="700" height="500" controls>
+        <source src="../Signalis/files/gameplay.mp4" type="video/mp4">
+        </video>
+    </div>
+   
     
 </body>
 </html>
