--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Chivo+Mono:wght@100&family=Lobster&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+<script src="rps.js"></script>
 </head>
 <body>
     <div class="container">
@@ -59,7 +60,9 @@
         <source src="../Signalis/files/gameplay.mp4" type="video/mp4">
         </video>
     </div>
-   
+    <div class="interact">
+        <p id="demo" onclick="myFunction()">Will you be able to escape?</p>
+    </div>
     
 </body>
 </html>
